Update list picture template to show modified pic as well

--- a/main/templates/main/picture_list.html
+++ b/main/templates/main/picture_list.html
@@ -1,4 +1,6 @@
 
 {% for object in object_list %}
 {{ object.name }}
+<img src="{{ object.image.url }}" style="width:100px"/>
+<img src="{{ object.modified_img.url }}" style="width:100px"/>
 {% endfor %}
